# se-skills

./: .gitignore  .pr-body-pov-002.md  .pr-body-sec005.md  IMPLEMENTATION-PLAN.md  MAINTAINING.md  README.md  install.sh  pyproject.toml
.github/workflows/: eval-deterministic.yml  eval-model-dependent.yml
config/: se-config.example.yaml
eval/: PHASE1-BASELINE.md  README.md  __init__.py  assertions.py  conftest.py  golden.py  runner.py
eval/schemas/: __init__.py  manifest.py
eval/tests/: __init__.py  test_account_service.py  test_accounts_routes.py  test_ask_routes.py  test_ask_service.py  test_feedback_service.py  test_invariants.py  test_job_service.py  test_manifests.py  test_md_render.py  test_output_path_safety.py  test_output_schema.py  test_output_service.py  test_overview_routes.py  test_pov_gsheet.py  test_pov_gsheet_bridge.py  test_reference_freshness.py  test_runner.py  test_salesforce_integration.py  test_salesforce_routes.py  test_skill_constraint_preservation.py  test_skill_playbook.py  test_skill_regression.py  test_transcription_routes.py  test_webapp_app_boundaries.py  test_webapp_composition_root.py  test_webapp_durable_state.py  test_webapp_export_sanitization.py  (+13 more)
reference/: airbyte-objection-reference.md
scripts/: check-sync.sh  install-hooks.sh  pre-commit
skills/: _se-playbook.md
webapp/: CLAUDE.md  LIVE-TRANSCRIBE.md  README.md  SESSION-LOG.md  app.py  config.py  golden.py  internal_html.py  md_render.py  orchestrator.py  output_schema.py  pdf_render.py  persistence.py  pov_gsheet_bridge.py  pov_gsheet_context.py  reference_freshness.py  security.py  soql.py  team-members.yaml
(+96 files in other folders)
