[project]
name = "se-skills"
version = "0.1.0"
description = "Evaluation framework and development tooling for the SE Skills Suite."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["eval"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "model_dependent: tests that invoke a language model (skipped by default)",
    "slow: tests that take more than a few seconds",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
